<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="movie_name">How to Train Your Dragon : The Hidden World</string>
    <string name="movie_score">0.0</string>
    <string name="movie_date">January 1, 2020</string>
    <string name="movie_cast_header">Cast :</string>
    <string name="movie_cast">- Name\n- Name\n- Name\n- Name\n- Name</string>
    <string name="movie_desc">Deskripsi Film</string>
    <string name="img_desc">Poster Film</string>

    <string-array name="data_name">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon : The Hidden World</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Spider-Man : Into The Spider-Verse</item>
        <item>The Girl in The Spider\'s Web</item>
        <item>The Mule</item>
        <item>Venom</item>

    </string-array>

    <string-array name="data_date">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>November 27, 2018</item>
        <item>January 17, 2019</item>
        <item>December 6, 2018</item>
        <item>October 25, 2018</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
    </string-array>

    <string-array name="data_score">
        <item>7.5</item>
        <item>6.8</item>
        <item>8.3</item>
        <item>6.9</item>
        <item>8.0</item>
        <item>6.5</item>
        <item>6.8</item>
        <item>6.9</item>
        <item>7.7</item>
        <item>6.5</item>
        <item>6.4</item>
        <item>6.6</item>
        <item>6.1</item>
        <item>6.5</item>
        <item>8.4</item>
        <item>6.0</item>
        <item>6.6</item>
        <item>6.6</item>
    </string-array>

    <string-array name="data_cast">
        <item>- Bradley Cooper\n- Lady Gaga\n- Sam Elliott\n- Andrew Dice Clay\n- Rafi Gavron</item>
        <item>- Jason Momoa\n- Amber Heard\n- Willem Dafoe\n- Patrick Wilson\n- Nicole Kidman</item>
        <item>- Robert Downey Jr.\n- Chris Hemsworth\n- Chris Evans\n- Mark Ruffalo\n- Scarlet Johansson</item>
        <item>- Sandra Bullock\n- Trevante Rhodes\n- Jacki Weaver\n- Rosa Salazar\n- Danielle Macdonald</item>
        <item>- Rami Malek\n- Gwilym Lee\n- Ben Hardy\n- Joseph Mazzello\n- Lucy Boynton</item>
        <item>- Hailee Steinfeld\n- Jorge Lendeborg Jr.\n- John Cena\n- Jason Ian Drucker\n- Pamela Adlon</item>
        <item>- Michael B. Jordan\n- Sylvester Stallone\n- Dolph Lundgren\n- Florian Munteanu\n- Tessa Thompson</item>
        <item>- Ryan Reynolds\n- Fred Savage\n- Josh Brolin\n- Morena Baccarin\n- Julian Dennison</item>
        <item>- Jay Baruchel\n- America Ferrera\n- Cate Blanchett\n- Craig Ferguson\n- Jonah Hill</item>
        <item>- James McAvoy\n- Bruce Willis\n- Anya Taylor-Joy\n- Sarah Paulson\n- Samuel L. Jackson</item>
        <item>- Gerard Butler\n- Gary Oldman\n- Toby Stephens\n- Common\n- Linda Cardellini</item>
        <item>- Emily Blunt\n- Lin-Manuel Miranda\n- Ben Whishaw\n- Emily Mortimer\n- Pixie Davies</item>
        <item>- Hera Hilmar\n- Robert Sheehan\n- Hugo Weaving\n- Jihae\n- Ronan Raftery</item>
        <item>- Epy Kusnandar\n- Tya Arifin\n- Soraya Rasyid\n- Andra Manihot\n- Sandi Tile</item>
        <item>- Shameik Moore\n- Jake Johnson\n- Hailee Steinfeld\n- Mahershala Ali\n- Brian Tyree Henry</item>
        <item>- Claire Foy\n- Sverrir Gudnason\n- Lakeith Stanfield\n- Sylvia Hoeks\n- Stephen Merchant</item>
        <item>- Clint Eastwood\n- Bradley Cooper\n- Laurence Fishburne\n- Michael Pena\n- Dianne Wiest</item>
        <item>- Tom Hardy\n- Michelle Williams\n- Riz Ahmed\n- Scott Haze\n- Reid Scott</item>
    </string-array>

    <string-array name="data_description">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his eighties, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he\'s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </array>
</resources>

