<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_date"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_cast_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_cast_header"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_cast"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_score"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home"
        android:text="@string/movie_name"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginTop="16dp"
        android:text="@string/movie_desc" />

</RelativeLayout>