<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp" >

    <ImageView
        android:contentDescription="@string/img_desc"
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="150dp" />

    <LinearLayout
        android:id="@+id/home"
        android:layout_toEndOf="@id/img_photo"
        android:layout_marginStart="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_score"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_date"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/movie_desc" />

</RelativeLayout>